fix: harden event retries and canonical validation